<resources>
    <string name="app_name">NewsApp</string>
    <string name="news_app">News App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LogIn</string>
    <string name="you_don_t_have_account">You don\'t have account?</string>
    <string name="register_now">Register Now!</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone Number</string>
    <string name="technology_notifications">Technology Notifications</string>
    <string name="logout">logout</string>
    <string name="notifications">Notifications</string>
    <string name="policy_notifications">Policy Notifications</string>
    <string name="sports_notifications">Sports Notifications</string>
    <string name="health_notifications">Health Notifications</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sports">Sports</string>
    <string name="policy">Policy</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="search">Search</string>
    <string name="signup">Signup</string>
    <string name="first_name">First name</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="settings">Settings</string>
    <string name="add_admin">Add Admin</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send">Send</string>
    <string name="type">Type</string>
    <string name="to_news">To News</string>
    <string name="comment">Comment</string>
    <string name="post">Post</string>
    <string name="comments">Comments:</string>
    <string name="make_admin">make Admin</string>
</resources>