<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:id="@+id/cat"
    android:orientation="vertical"
    android:background="@color/gray">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="vertical"
        android:rowCount="1"
        android:theme="@style/Theme.AppCompat.Light"
        android:useDefaultMargins="true">
        <Button
            android:id="@+id/health"
            android:layout_width="93dp"
            android:layout_height="68dp"
            android:layout_rowWeight="1"
            android:text="@string/health"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />
        <Button
            android:id="@+id/policy"
            android:layout_width="88dp"
            android:layout_height="67dp"
            android:layout_rowWeight="1"
            android:text="@string/policy"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />
        <Button
            android:id="@+id/sport"
            android:layout_width="89dp"
            android:layout_height="68dp"
            android:layout_rowWeight="1"
            android:text="@string/sports"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />
        <Button
            android:id="@+id/technology"
            android:layout_width="90dp"
            android:layout_height="68dp"
            android:layout_rowWeight="1"
            android:text="@string/technology"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,SmallSp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10sp">
        <LinearLayout
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
</LinearLayout>